A Category tesztesetekhez elkészült az adatbázis és controller dokumentációk, továbbá a Next általi struktúra-megjelenítés javításra került.

--- a/docs/content/02.Frontend/02.ToastService.md
+++ b/docs/content/02.Frontend/02.ToastService.md
@@ -1,4 +1,6 @@
-# ToastService Programspecifikáció és Funkcióleírás
+# ToastService
+
+## A ToastService Programspecifikáció és Funkcióleírás
 
 ## Áttekintés
 A `ToastService` egy Vue 3 alapú értesítési szolgáltatás, amely a `vue3-toastify` könyvtárat használja. A szolgáltatás célja, hogy egyszerű és testreszabható értesítéseket biztosítson a felhasználói felületen, például hibaüzenetek, sikeres műveletek vagy betöltési állapotok megjelenítésére.
