Adatbázis szerkezetének gyökeres átalakítása a POC-2 előkészítéséhez és a hatékonyság növeléséhez.

--- a/docs/content/02.Frontend/01.ProductStore.md
+++ b/docs/content/02.Frontend/01.ProductStore.md
@@ -99,8 +99,8 @@ async function getProduct(id) {
 ### `getImagePath`
 
 ```javascript
-const getImagePath = (brand, weight, flavour, description) => {
-    if (!brand || !weight || !flavour) return "/default-image.webp";
+const getImagePath = (brand, quantity, flavour, description) => {
+    if (!brand || !quantity || !flavour) return "/default-image.webp";
 
     const getProductLine = (brand, description) => {
         if (brand === "Scitec") {
@@ -115,7 +115,7 @@ const getImagePath = (brand, weight, flavour, description) => {
 
     const images = import.meta.glob("@/assets/products_img/**/*.webp", { eager: true });
     const subfolder = getProductLine(brand, description);
-    const pattern = `products_img/${brand}/${subfolder}/${weight}/${weight}_${flavour}.webp`;
+    const pattern = `products_img/${brand}/${subfolder}/${quantity}/${quantity}_${flavour}.webp`;
 
     // További képkezelési logika...
 };
@@ -125,7 +125,7 @@ const getImagePath = (brand, weight, flavour, description) => {
 
 **Paraméterek:**
 - `brand` (Szöveg): Márkanév.
-- `weight` (Szám/Szöveg): Termék súlya.
+- `quantity` (Szám/Szöveg): Termék súlya.
 - `flavour` (Szöveg): Termék ízesítése.
 - `description` (Szöveg): Termék leírása.
 
@@ -145,7 +145,7 @@ A termékek az alábbi szerkezetben vannak tárolva:
 {
     "id": 1,
     "description": "100% Whey Protein Professional",
-    "weight": 30,
+    "quantity": 30,
     "flavour": "Vanilla",
     "price": 490,
     "categories": [
