--- a/docs/content/03.Tesztesetek/03.Product_Database.md
+++ b/docs/content/03.Tesztesetek/03.Product_Database.md
@@ -65,12 +65,12 @@ Ez a teszteset a `products` adatbázistábla meglétét és annak oszlopait elle
 
 5. **`test_products_table_has_weight_column`**
 
-     Ellenőrzi, hogy a `products` tábla tartalmazza a `weight` oszlopot.
+     Ellenőrzi, hogy a `products` tábla tartalmazza a `quantity` oszlopot.
 
      ```php
      $this->assertTrue(
-             Schema::hasColumn('products', 'weight'),
-             'A weight mező nem létezik a products táblában'
+             Schema::hasColumn('products', 'quantity'),
+             'A quantity mező nem létezik a products táblában'
      );
      ```
 
@@ -136,7 +136,7 @@ Ez a teszteset a `products` adatbázistábla meglétét és annak oszlopait elle
         - `id`
         - `category_id`
         - `description`
-        - `weight`
+        - `quantity`
         - `flavour`
         - `price`
         - `created_at`
@@ -149,7 +149,7 @@ Ez a teszteset a `products` adatbázistábla meglétét és annak oszlopait elle
                         'id',
                         'category_id',
                         'description',
-                        'weight',
+                        'quantity',
                         'flavour',
                         'price',
                         'created_at',
