--- a/docs/content/03.Tesztesetek/04.Product_Controller.md
+++ b/docs/content/03.Tesztesetek/04.Product_Controller.md
@@ -48,7 +48,7 @@ Ellenőrzi, hogy új termék sikeresen létrehozható-e.
 {
     "category_id": 1,
     "description": "Test Product",
-    "weight": 500,
+    "quantity": 500,
     "flavour": "Chocolate",
     "price": 20
 }
@@ -101,7 +101,7 @@ Először létrehozunk egy terméket:
 {
     "category_id": 1,
     "description": "Test Product 1",
-    "weight": 500,
+    "quantity": 500,
     "flavour": "Chocolate",
     "price": 20
 }
@@ -113,7 +113,7 @@ Majd `PUT` kérés az `api/products/{id}` végpontra a következő adatokkal:
 {
     "category_id": 2,
     "description": "Test Product 2",
-    "weight": 600,
+    "quantity": 600,
     "flavour": "Vanilla",
     "price": 25
 }
