Adatbázis backenden történő kiegészítése a Store, Update függvények megírásával, továbbá az átalakított Brand tesztesetei elkészültek, a Category-é folyamatban van.

--- a/docs/content/02.Frontend/01.ProductStore.md
+++ b/docs/content/02.Frontend/01.ProductStore.md
@@ -151,7 +151,7 @@ A termékek az alábbi szerkezetben vannak tárolva:
     "categories": [
         {
             "brand": "Scitec",
-            "category_name": "protein",
+            "name": "protein",
             "stock": 5,
             "available": 1
         }
