--- a/docs/content/03.Tesztesetek/01.Category_Database.md
+++ b/docs/content/03.Tesztesetek/01.Category_Database.md
@@ -36,11 +36,11 @@ $this->assertTrue(
 ```
 
 #### 3. `test_categories_table_has_category_name_column`
-Ellenőrzi, hogy a `categories` tábla tartalmazza a `category_name` oszlopot.
+Ellenőrzi, hogy a `categories` tábla tartalmazza a `name` oszlopot.
 ```php
 $this->assertTrue(
-        Schema::hasColumn('categories', 'category_name'),
-        'A category_name mező nem létezik a categories táblában'
+        Schema::hasColumn('categories', 'name'),
+        'A name mező nem létezik a categories táblában'
 );
 ```
 
@@ -83,7 +83,7 @@ $this->assertTrue(
 #### 8. `test_categories_table_has_correct_column_names`
 Ellenőrzi, hogy a `categories` tábla tartalmazza az összes szükséges oszlopot:
 - `id`
-- `category_name`
+- `name`
 - `brand`
 - `created_at`
 - `updated_at`
@@ -93,7 +93,7 @@ Ellenőrzi, hogy a `categories` tábla tartalmazza az összes szükséges oszlop
 $this->assertTrue(
         Schema::hasColumns('categories', [
                 'id',
-                'category_name',
+                'name',
                 'brand',
                 'created_at',
                 'updated_at',
