--- a/docs/content/03.Tesztesetek/02.Category_Controller.md
+++ b/docs/content/03.Tesztesetek/02.Category_Controller.md
@@ -46,7 +46,7 @@ Ellenőrzi, hogy új kategória sikeresen létrehozható-e.
 
 ```json
 {
-    "category_name": "TestCategory",
+    "name": "TestCategory",
     "brand": "TestProtein"
 }
 ```
@@ -95,7 +95,7 @@ Ellenőrzi, hogy egy meglévő kategória adatai sikeresen módosíthatók-e.
 
 ```json
 {
-    "category_name": "TestCategory_1",
+    "name": "TestCategory_1",
     "brand": "TestProtein_1"
 }
 ```
@@ -104,7 +104,7 @@ Ellenőrzi, hogy egy meglévő kategória adatai sikeresen módosíthatók-e.
 
 ```json
 {
-    "category_name": "TestCategory_2",
+    "name": "TestCategory_2",
     "brand": "TestProtein_2"
 }
 ```
