Bugfix and refactoring ProductStore. Some of the missing productdetails page have been created. Setup before merge

--- a/docs/content/02.Frontend/01.ProductStore.md
+++ b/docs/content/02.Frontend/01.ProductStore.md
@@ -1,5 +1,44 @@
 # ProductStore
 
+1. Már nem hívjuk (le) feleslegesen a getProducts() függvényt újra, ha már megvannak az adatok (feltételes hívás beleépítve). 
+2. FormatPrice és a formatToOneThousandPrice egyesítve --> Store-ból hívódik. Érintettek: Proteins, Multivitamins, brand-quantity-falvour oldalak.
+3. Az API-hívások teljesítményének javításához `localStorage` alapú `saveStateToLocalStorage` és `restoreStateFromLocalStorage` eljárások.
+
+## Javítva, de átmenetileg
+1. `ProductVariantSeeder` -ben át lett írva az Pro Nutrition 3 vitaminja `name` keresésről `slug`-ra, de meg kell nézni miért nem volt jó alapból a `name`-mel a seedelés.
+
+
+Függvény	Használat helye	Megjegyzés
+
+**getProducts()**
+    - index.vue
+    - brands/[brand].vue
+    - proteins/Proteins.vue
+    - vitamins/Multivitamins.vue
+    - [brand]-[quantity]-[flavour].vue	
+    `Minden oldalon újra betöltésre kerülnek a termékek, ami felesleges hálózati kéréseket eredményezhet`
+
+**sortProductsByBrand()**
+    - index.vue
+    - brands/[brand].vue
+`Márka szerinti szűréshez használt`
+
+**formatToOneThousandPrice()**	- [brand]-[quantity]-[flavour].vue	
+`Árak formázásához`
+
+**filtered** tulajdonság	
+    - index.vue	
+`Szűrt termékek megjelenítéséhez`
+
+
+<!-- const proteinProducts = productStore.filterProductsByCategory("protein");
+const multivitaminProducts = productStore.filterProductsByCategory("multivitamin"); -->
+
+
+
+
+
+
 ## A ProductStore Programspecifikáció és Funkcióleírás
 
 ## Áttekintés
