--- a/docs/content/02.Frontend/01.ProductStore.md
+++ b/docs/content/02.Frontend/01.ProductStore.md
@@ -1,44 +1,5 @@
 # ProductStore
 
-1. Már nem hívjuk (le) feleslegesen a getProducts() függvényt újra, ha már megvannak az adatok (feltételes hívás beleépítve). 
-2. FormatPrice és a formatToOneThousandPrice egyesítve --> Store-ból hívódik. Érintettek: Proteins, Multivitamins, brand-quantity-falvour oldalak.
-3. Az API-hívások teljesítményének javításához `localStorage` alapú `saveStateToLocalStorage` és `restoreStateFromLocalStorage` eljárások.
-
-## Javítva, de átmenetileg
-1. `ProductVariantSeeder` -ben át lett írva az Pro Nutrition 3 vitaminja `name` keresésről `slug`-ra, de meg kell nézni miért nem volt jó alapból a `name`-mel a seedelés.
-
-
-Függvény	Használat helye	Megjegyzés
-
-**getProducts()**
-    - index.vue
-    - brands/[brand].vue
-    - proteins/Proteins.vue
-    - vitamins/Multivitamins.vue
-    - [brand]-[quantity]-[flavour].vue	
-    `Minden oldalon újra betöltésre kerülnek a termékek, ami felesleges hálózati kéréseket eredményezhet`
-
-**sortProductsByBrand()**
-    - index.vue
-    - brands/[brand].vue
-`Márka szerinti szűréshez használt`
-
-**formatToOneThousandPrice()**	- [brand]-[quantity]-[flavour].vue	
-`Árak formázásához`
-
-**filtered** tulajdonság	
-    - index.vue	
-`Szűrt termékek megjelenítéséhez`
-
-
-<!-- const proteinProducts = productStore.filterProductsByCategory("protein");
-const multivitaminProducts = productStore.filterProductsByCategory("multivitamin"); -->
-
-
-
-
-
-
 ## A ProductStore Programspecifikáció és Funkcióleírás
 
 ## Áttekintés
@@ -46,162 +7,164 @@ const multivitaminProducts = productStore.filterProductsByCategory("multivitamin
 A `ProductStore.mjs` egy Pinia tároló (store) implementációt tartalmaz, amely termékadatok kezelésére szolgál egy Vue.js alkalmazásban. A tároló állapotkezelést és funkcionalitást biztosít egy termékkatalógus számára, kifejezetten táplálék-kiegészítőkre és proteintermékekre fókuszálva.
 
 ---
-
 ## Tároló definíció
 
 ```javascript
 export const useProductStore = defineStore("products", () => {
-    // Tároló implementáció
+  // Tárolóban lévő composition-API alapú függvények, változók stb.
 });
 ```
 
 A tároló a Pinia `defineStore` függvényével kerül létrehozásra `"products"` azonosítóval.
 
----
 
 ## Állapotváltozók
 
-| **Változó**          | **Típus**      | **Leírás**                                   |
-|-----------------------|----------------|---------------------------------------------|
-| `products`           | `ref([])`      | Fő tömb, amely az összes termékadatot tárolja |
-| `oneProduct`         | `ref([])`      | Egyetlen terméket tárol tömb formájában      |
-| `product`            | `ref(null)`    | Referencia egy egyedi termékobjektumra       |
-| `filteredProducts`   | `ref()`        | Szűrt termékeredményeket tárol               |
-| `filtered`           | `ref([])`      | Másik tömb a szűrt termékekhez               |
-| `loading`            | `ref(boolean)` | Betöltési állapotot jelző változó            |
-| `currentProduct`     | `ref`          | Jelenleg kiválasztott/aktív termék           |
-| `currentFlavour`     | `ref`          | Jelenleg kiválasztott ízesítés               |
-| `selectedFlavour`    | `ref`          | A felhasználói felületen kiválasztott ízesítés |
-| `availableFlavours`  | `ref([])`      | Az aktuális termékhez elérhető ízesítések tömbje |
+| Változó                     | Típus        | Leírás                                    |
+| --------------------------- | ------------ | ----------------------------------------- |
+| `products`                  | `ref([])`    | Minden termék itt van                     |
+| `product`                   | `ref(null)`  | Egy adott termék részletes adatai         |
+| `filtered`                  | `ref([])`    | Szűrt lista, pl. márka alapján            |
+| `loading`                   | `ref(false)` | Betöltési állapot – true, ha épp lekér    |
+| `currentProduct`            | `ref(null)`  | Jelenleg kiválasztott termék              |
+| `currentFlavour`            | `ref(null)`  | Jelenleg kiválasztott íz                  |
+| `selectedFlavour`           | `ref(null)`  | Amit a user kiválasztott a UI-on          |
+| `availableFlavours`         | `ref([])`    | Elérhető ízek egy adott termékhez         |
+| `proteinProducts`           | `ref([])`    | Csak protein termékek                     |
+| `proteinVariants`           | `ref([])`    | Protein variánsok (pl. ízek, súlyok)      |
+| `proteinBrands`             | `ref([])`    | Csak a protein márkák                     |
+| `proteinStats`              | `ref({...})` | Összesítő statisztika proteinekről        |
+| `groupedProductsByCategory` | `ref({})`    | Kategória szerint csoportosítva           |
+| `categoriesFetched`         | `ref(false)` | Egyszer már lekérdeztük-e a kategóriákat? |
 
 ---
+### Fő funkciók és metódusok
+### `getProducts()
 
-## Alap Függvények
+- **Cél:** Összes termék lekérése. Beállítja a betöltési állapotot.
+- **Röviden:** Ha már vannak termékek a Store-ban, a függvény nem kéri le újra az adatbázisból.
+  Amennyiben még nincsenek, lekéri a backend-szerverről - HTTP GET kérést küld a `/products` végpontra -, és betölti azokat a store-ba.
 
-### `getProducts`
-
-```javascript
-async function getProducts() {
-    try {
-        loading.value = true;
-        const resp = await http.get("/products");
-        products.value = resp.data.data;
-    } catch (error) {
-        console.error("Hiba a termékek lekérése során:", error);
-    } finally {
-        loading.value = false;
+```js
+const getProducts = async () => {
+  try {
+    if (products.value.length > 0) {
+      console.log("Adatok már betöltve.");
+      return products.value;
     }
-}
-```
-
-**Cél:** Az összes termék lekérése a szerverről.
-
-**Működés:**
-- Beállítja a betöltési állapotot.
-- HTTP GET kérést küld a `/products` végpontra.
-- A válaszadatokat a `products` állapotváltozóba menti.
-- Hiba esetén konzolra naplózza a hibát.
-- Végül visszaállítja a betöltési állapotot.
-
----
-
-### `getProduct`
-
-```javascript
-async function getProduct(id) {
-    try {
-        loading.value = true;
-        const resp = await http.get(`/products/${id}`);
-        product.value = resp.data.data;
-    } catch (error) {
-        console.error("Hiba a termék lekérése során:", error);
-    } finally {
-        loading.value = false;
-    }
-}
-```
-
-**Cél:** Egy adott termék lekérése azonosító alapján.
-
-**Paraméterek:**
-- `id` (Szám): A kért termék azonosítója.
-
-**Működés:**
-- Beállítja a betöltési állapotot.
-- HTTP GET kérést küld a `/products/{id}` végpontra.
-- A válaszadatot a `product` állapotváltozóba menti.
-- Hiba esetén konzolra naplózza a hibát.
-- Végül visszaállítja a betöltési állapotot.
-
----
-
-### `getImagePath`
-
-```javascript
-const getImagePath = (brand, quantity, flavour, description) => {
-    if (!brand || !quantity || !flavour) return "/default-image.webp";
-
-    const getProductLine = (brand, description) => {
-        if (brand === "Scitec") {
-            return description?.includes("Jumbo") ? "Jumbo!" : "wpp";
-        }
-        const brandLines = {
-            "Pro Nutrition": "Pro Whey",
-            "Builder": "WheyProtein"
-        };
-        return brandLines[brand] || "";
-    };
-
-    const images = import.meta.glob("@/assets/products_img/**/*.webp", { eager: true });
-    const subfolder = getProductLine(brand, description);
-    const pattern = `products_img/${brand}/${subfolder}/${quantity}/${quantity}_${flavour}.webp`;
-
-    // További képkezelési logika...
+    loading.value = true;
+    const resp = await http.get("/products");
+    products.value = resp.data.data;
+    return products.value;
+  } catch (error) {
+    console.error("Hiba a termékek lekérése során:", error);
+    return [];
+  } finally {
+    loading.value = false;
+  }
 };
 ```
-
-**Cél:** Termékképek útvonalának meghatározása.
-
-**Paraméterek:**
-- `brand` (Szöveg): Márkanév.
-- `quantity` (Szám/Szöveg): Termék súlya.
-- `flavour` (Szöveg): Termék ízesítése.
-- `description` (Szöveg): Termék leírása.
-
-**Működés:**
-- Ellenőrzi, hogy a szükséges paraméterek rendelkezésre állnak-e.
-- Ha valamely szükséges paraméter hiányzik, alapértelmezett képet ad vissza.
-- Meghatározza a termékcsaládot a márka és leírás alapján.
-- Összeállítja a képútvonalat a megadott paraméterek alapján.
-
 ---
 
-## Adatmodell
+### getProduct(id)
 
-A termékek az alábbi szerkezetben vannak tárolva:
+- **Cél:** Egy konkrét, adott termék lekérése annak azonosítója, tulajdonsága alapján.
+- **Működése:** HTTP GET kérést küld a `/products/{id}` végpontra és a "válasz-objektumot" a `product` változóba menti.
+
+```js
+async function getProduct(id) {
+  try {
+    loading.value = true;
+    const resp = await http.get(`/products/${id}`);
+    product.value = resp.data.data;
+  } catch (error) {
+    console.error("Hiba a termék lekérése során:", error);
+  } finally {
+    loading.value = false;
+  }
+}
+```
+---
+
+### sortProductsByBrand - Termékek Rendezése Márka Alapján
+
+- **Cél:** Termékek kiszűrése és rendezése megadott márka szerint.
+- **Működése:** A szűrő lekérdezést indít a meglévő termékek között.
+  Csak az elérhető és megfelelő márkajelzésű elemek jelennek meg.
+
+```js
+const sortProductsByBrand = async (brandName) => {
+  try {
+    const result = products.value.filter(
+      (product) =>
+        product.brand?.name.toLowerCase() === brandName.toLowerCase() &&
+        product.available === 1
+    );
+    filtered.value = result;
+  } catch (error) {
+    console.error("Hiba a termékek szűrésekor:", error);
+  }
+};
+```
+---
+### loadProductDetails - Termék Részleteinek Betöltése
+#### **Folyamat:**
+
+1. Paraméterek ellenőrzése.
+2. Segítséget nyújt / felhasználásra kerül a sortGetOneProduct függvénytermék kikeresésében.
+3. Részletek mentése a currentProduct állapotváltozóba.
+
+```js
+const loadProductDetails = async (brand, quantity, flavour) => {
+  try {
+    loading.value = true;
+    if (!brand || !quantity || !flavour)
+      throw new Error("Hiányzó paraméterek!");
+    const productData = await sortGetOneProduct(brand, quantity, flavour);
+    if (productData?.length > 0) {
+      currentProduct.value = productData[0];
+      selectedFlavour.value = flavour;
+    }
+  } catch (error) {
+    console.error("Hiba a részletek betöltése során:", error);
+  } finally {
+    loading.value = false;
+  }
+};
+```
+---
+### Adatok Formátuma
+#### Fő Tulajdonságok
+
+1.  Egyedi azonosító (id)
+2.  Név és leírás (name és description)
+3.  Terméksorozat (product_line)
+4.  Variánsok (variants): Különböző méretű, ízesítésű és árú lehetőségek a termékhez.
 
 ```json
 {
-    "id": 1,
-    "description": "100% Whey Protein Professional",
-    "quantity": 30,
-    "flavour": "Vanilla",
-    "price": 490,
-    "categories": [
-        {
-            "brand": "Scitec",
-            "name": "protein",
-            "stock": 5,
-            "available": 1
-        }
-    ]
+  "id": 1,
+  "name": "100% Whey Protein Professional",
+  "description": "Prémium minőségű fehérje formula",
+  "product_line": "WPP",
+  "variants": [{ "quantity": 900, "price": 11990, "flavour": "Vanilla" }]
 }
 ```
+---
+### Statikus Képekútvonal Összeállítása
+#### Fő Tulajdonságok
 
-**A termékadatmodell tartalmazza:**
-- Egyedi azonosítót.
-- Termékleírást.
-- Súlyt.
-- Ízesítést.
-- Árat.
-- Kategória információkat, beleértve a márkát, kategórianevet, készletet és elérhetőséget.
+1.  Ellenőrzi a kötelező paramétereket.
+2.  A márka alapján alkönyvtárat választ.
+3.  Összeállítja az útvonalat a bemeneti paraméterek alapján.
+
+```js
+const getImagePath = (brand, quantity, flavour) => {
+  if (!brand || !quantity || !flavour) return "/default-image.webp";
+  const subfolder = brand.toLowerCase() === "scitec" ? "wpp" : "default";
+  return `products_imgs/\${brand}/${subfolder}/${quantity}/${quantity}_${flavour}.webp`;
+};
+```
+
+## Összegzés
+A ProductStore egy jól strukturált állapottárhely, amely biztosítja a különböző termékhez kapcsolódó műveletek elvégzését (pl. lekérdezés, szűrés, rendezés). Kiválóan alkalmas Vue.js projektekhez, különösen akkor, ha táplálék-kiegészítőkkel kapcsolatos adatokat kell kezelni egyszerű és hatékony módon.
